samples/_failures_safe/1761619681_8f1739_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_023a748b.c: In function ‘main’:
./samples/SAFE/__tmp_023a748b.c:154:17: error: expected expression at end of input
  154 |                 int status = matrix_add(&mat1, &mat2,
      |                 ^~~
./samples/SAFE/__tmp_023a748b.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_023a748b.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_023a748b.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_023a748b.c:154:17: error: expected declaration or statement at end of input
